--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -41,7 +41,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
+       <!--        Feign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!-- Config Client Starter -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -71,6 +75,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
+
 
 
     </dependencies>
