配置中心修改为从git拉取配置文件

--- a/configuration_center/src/main/resources/application.yml
+++ b/configuration_center/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 spring:
   application:
     name: social-commerce-config
-  profiles:
-    active: native #启用本地配置文件
   cloud:
     config:
+      label: master
       server:
-        native:
-          search-locations: classpath:/ #配置文件扫描目录
+        git:
+          uri: https://github.com/ChunyuePeng/spring-cloud-config-repo
+          search-paths: dev
+
 
 server:
   port: 8000 #服务端口
