--- a/registration_center/src/main/resources/bootstrap.yml
+++ b/registration_center/src/main/resources/bootstrap.yml
@@ -3,4 +3,5 @@ spring:
           config:
             name: social-commerce-registry #配置文件名称，多个通过逗号分隔
             uri: http://localhost:8000 #Config Server服务地址
+            profile: dev
 #            uri: http://120.26.176.128:8000 #Config Server服务地址
