--- a/order_service/src/main/resources/bootstrap.yml
+++ b/order_service/src/main/resources/bootstrap.yml
@@ -3,3 +3,4 @@ spring:
     config:
       name: order-service #配置文件名称，多个通过逗号分隔
       uri: http://localhost:8000 #Config Server服务地址
+      profile: dev
