--- a/auth_service/src/main/resources/bootstrap.yml
+++ b/auth_service/src/main/resources/bootstrap.yml
@@ -2,5 +2,5 @@ spring:
   cloud:
     config:
       name: auth-service #配置文件名称，多个通过逗号分隔
-      uri: http://localhost:8000 #Config Server服务地址
-      profile: dev
+      uri: http://172.16.50.224:8000 #Config Server服务地址
+      profile: dep
