--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -2,5 +2,7 @@ spring:
   cloud:
     config:
       name: social-commerce-gateway #配置文件名称，多个通过逗号分隔
-      uri: http://localhost:8000 #Config Server服务地址
-      profile: dev
+      uri: http://172.16.50.224:8000 #Config Server服务地址
+      profile: dep
+#      uri: http://localhost:8000 #Config Server服务地址
+#      profile: dev
