--- a/wx_service/src/main/resources/bootstrap.yml
+++ b/wx_service/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     config:
       name: wx-service #配置文件名称，多个通过逗号分隔
       uri: http://172.16.50.224:8000 #Config Server服务地址
-      profile: dev
+      profile: dep
