--- a/admin_goods_service/pom.xml
+++ b/admin_goods_service/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
